# Vulkan_3d_rendering

./: license.txt  readme.md
cpp_vlk_1.a_triangle/: CMakeLists.txt  build.bat  compile.bat  run.bat
cpp_vlk_1.a_triangle/shaders/: simple.frag  simple.vert
cpp_vlk_1.a_triangle/shaders/compiled/: simple.vert.spv
cpp_vlk_1.a_triangle/src/: app.cpp  app.hpp  main.cpp
cpp_vlk_1.a_triangle/src/vulkan_glfw/: device.cpp  device.hpp  pipeline.cpp  pipeline.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
cpp_vlk_2.a_blinn_phong/: CMakeLists.txt  release.txt  shader_compile.bat
cpp_vlk_2.a_blinn_phong/shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
cpp_vlk_2.a_blinn_phong/shaders/compiled/: point_light.frag.spv  point_light.vert.spv  simple_shader.frag.spv  simple_shader.vert.spv
cpp_vlk_2.a_blinn_phong/src/: app.cpp  app.hpp  controller.cpp  controller.hpp  main.cpp  point_light.cpp  point_light.hpp  simple_render.cpp  simple_render.hpp
cpp_vlk_2.a_blinn_phong/src/vulkan_glfw/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frame_info.hpp  game_object.cpp  game_object.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.cpp  window.hpp
